# artery

./: .cproject  .gitignore  .gitmodules  .nedfolders  .project  CMakeLists.txt  Makefile  README.md  opp_cmake.py
.github/workflows/: format.yaml  lint.yaml  prepare.yaml  test.yaml
cmake/: FindOmnetPP.cmake  GenerateOppMessage.cmake  ImportOppTarget.cmake
scenarios/artery/: omnetpp.ini  omnetpp.ini_sepserv
scenarios/car2car-grid/: omnetpp.ini
scenarios/highway-police/: ClearLaneService.cc  PoliceServiceEnvmod.cc  PoliceServiceStoryboard.cc  omnetpp.ini
scenarios/lte-blackice/: BlackIceCentral.cc  BlackIceCentral.ned  BlackIceReporter.cc  BlackIceReporter.ned  BlackIceWarner.cc  BlackIceWarner.ned  BlackIceWarnerD2D.cc  BlackIceWarnerD2D.ned  lte_network.xml  omnetpp.ini
scenarios/simulte/: omnetpp.ini
scenarios/storyboard/: omnetpp.ini
scenarios/testbed/: omnetpp.ini
src/artery/: CMakeLists.txt  StaticNodeManager.cc
src/artery/application/: CaObject.cc  CaObject.h  CaService.cc  CaService.h  DenService.cc  DenService.h  ExampleService.cc  GbcMockMessage.cc  GbcMockService.cc  ItsG5BaseService.cc  ItsG5BaseService.h  LdmObject.h  LocalDynamicMap.cc  LocalDynamicMap.h  Middleware.cc  Middleware.h  Middleware.ned  MovingNodeDataProvider.cc  MovingNodeDataProvider.h  PeriodicLoadService.cc  PersonMiddleware.cc  PersonMiddleware.h  PersonMiddlewareEmpty.cc  PersonMiddlewareEmpty.h  PersonMiddlewareEmpty.ned  RsuCaService.cc  VaClusterHelper.h  VaObject.cc  VaObject.h  VaService.cc  VaService.h  VaService.ned  Vbs.cc  Vbs.h  Vbs.ned  VehicleDataProvider.cc  VehicleDataProvider.h  VehicleKinematics.cc  VehicleKinematics.h  VehicleMiddleware.cc  (+3 more)
src/artery/application/den/: CollisionRiskUseCase.cc  CollisionRiskUseCase.h  CollisionRiskUseCase.ned  ImpactReductionUseCase.cc  ImpactReductionUseCase.h  SuspendableUseCase.cc  SuspendableUseCase.h  TrafficJamUseCase.h  UseCase.cc  UseCase.h
src/artery/envmod/: EnvironmentModelObject.cc  GlobalEnvironmentModel.cc  IdentityRegistrant.cc  IdentityRegistrant.ned  RSU.ned  TraCIEnvironmentModelObject.cc
src/artery/envmod/sensor/: BaseSensor.cc  BaseSensor.h  FovSensor.cc  RadarSensor.cc
src/artery/envmod/service/: EnvmodPrinter.cc
src/artery/inet/: AntennaMobility.ned  Car.ned  InetMobility.cc  InetMobility.h  InetRadioDriver.cc  InetRadioDriver.h  PassiveProbe.ned  Person.ned  PowerLevelRx.cc  RSU.ned  VanetHcf.cc  VanetHcf.h  VanetMac.ned  VanetMgmt.cc  VanetMgmt.h  VanetNakagamiFading.cc  VanetNakagamiFading.h  VanetNakagamiFading.ned  VanetNic.ned  VanetRadio.cc  VanetRadio.h  VanetReceiver.cc  VanetReceiver.h  VanetReceiver.ned  World.ned
src/artery/inet/gemv2/: NLOSb.cc  NLOSb.h  NLOSf.cc  NLOSf.h  NLOSv.cc  NLOSv.h  ObstacleIndex.cc  (+2 more)
src/artery/lte/: Car.ned  World.ned
src/artery/networking/: Router.cc  Router.h  Router.ned  Runtime.cc  Vanetza.ned  VehiclePositionProvider.cc
src/artery/ots/: GTU.ned  World.ned
src/artery/storyboard/: Storyboard.cc  Storyboard.ned
src/artery/testbed/: TestbedCar.ned  TestbedRadio.ned
src/artery/traci/: ControlablePerson.cc  ControlablePerson.h  ControllableObject.h  ControllablePerson.cc  ControllablePerson.h  ControllableVehicle.cc  ControllableVehicle.h  Controller.cc  Controller.h  MobilityBase.cc  MobilityBase.h  MovingNodeController.h  PersonController.cc  PersonController.h  PersonMobility.cc  PersonMobility.h  VehicleController.cc  VehicleController.h  VehicleMobility.cc  VehicleMobility.h
src/artery/utility/: AsioData.msg  AsioScheduler.cc  AsioScheduler.h  Calculations.h  Identity.cc  Identity.h  IdentityRegistry.h
src/artery/veins/: ApplicationLayer.ned  VeinsMobility.cc  VeinsMobility.h  VeinsRadioDriver.cc  World.ned
src/traci/: API.cc  API.h  BasicModuleMapper.cc  BasicNodeManager.cc  BasicNodeManager.h  BasicNodeManager.ned  Boundary.h  CMakeLists.txt  ConnectLauncher.h  Core.cc  Core.h  Core.ned  ExtensibleNodeManager.cc  ExtensibleNodeManager.h  InsertionDelayNodeManager.cc  InsertionDelayNodeManager.h  InsertionDelayVehiclePolicy.cc  Launcher.h  Listener.cc  Listener.h  LiteAPI.h  Manager.ned  MovingObjectSink.h  MultiTypeModuleMapper.cc  NodeManager.h  PosixLauncher.cc  PosixLauncher.h  RegionOfInterestNodeManager.cc  RegionOfInterestNodeManager.h  RegionOfInterestNodeManager.ned  SubscriptionManager.h  TestbedModuleMapper.cc  TestbedModuleMapper.h  TraCIApiProvider.h  VariableCache.cc  VariableCache.h
(+5 files in other folders)
